src/show/snapshots/stakk__show__tests__json_full_snapshot.snap
---
source: src/show/mod.rs
expression: "render_json(&data, JsonProjection::Full)"
---
{
  "schema_version": 2,
  "default_branch": "main",
  "remotes": [
    {
      "name": "origin",
      "url": "git@github.com:glennib/stakk.git",
      "github": "glennib/stakk"
    },
    {
      "name": "mirror",
      "url": "https://gitlab.com/x/y.git",
      "github": null
    }
  ],
  "excluded_bookmark_count": 1,
  "stacks": [
    {
      "segments": [
        {
          "bookmark_names": [
            "base"
          ],
          "commits": [
            {
              "change_id": "mnrqxtvo",
              "short_change_id": "mnrq",
              "commit_id": "c_mnrqxtvo",
              "title": "add base",
              "description": "add base",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "files": [
                "src/mnrqxtvo.rs"
              ],
              "is_immutable": false,
              "local_bookmark_names": [],
              "is_boundary": false,
              "is_leaf": false
            },
            {
              "change_id": "qzvsmyxk",
              "short_change_id": "qzvs",
              "commit_id": "c_qzvsmyxk",
              "title": "extend base",
              "description": "extend base",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "files": [
                "src/qzvsmyxk.rs"
              ],
              "is_immutable": false,
              "local_bookmark_names": [
                "base"
              ],
              "is_boundary": true,
              "is_leaf": false
            }
          ]
        },
        {
          "bookmark_names": [
            "feat-a"
          ],
          "commits": [
            {
              "change_id": "ptszrkwu",
              "short_change_id": "ptsz",
              "commit_id": "c_ptszrkwu",
              "title": "feat a work",
              "description": "feat a work",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "files": [
                "src/ptszrkwu.rs"
              ],
              "is_immutable": false,
              "local_bookmark_names": [],
              "is_boundary": false,
              "is_leaf": false
            },
            {
              "change_id": "wmtkoylq",
              "short_change_id": "wmtk",
              "commit_id": "c_wmtkoylq",
              "title": "",
              "description": "",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "files": [
                "src/wmtkoylq.rs"
              ],
              "is_immutable": false,
              "local_bookmark_names": [
                "feat-a"
              ],
              "is_boundary": true,
              "is_leaf": true
            }
          ]
        }
      ]
    },
    {
      "segments": [
        {
          "bookmark_names": [
            "base"
          ],
          "commits": [
            {
              "change_id": "mnrqxtvo",
              "short_change_id": "mnrq",
              "commit_id": "c_mnrqxtvo",
              "title": "add base",
              "description": "add base",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "files": [
                "src/mnrqxtvo.rs"
              ],
              "is_immutable": false,
              "local_bookmark_names": [],
              "is_boundary": false,
              "is_leaf": false
            },
            {
              "change_id": "qzvsmyxk",
              "short_change_id": "qzvs",
              "commit_id": "c_qzvsmyxk",
              "title": "extend base",
              "description": "extend base",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "files": [
                "src/qzvsmyxk.rs"
              ],
              "is_immutable": false,
              "local_bookmark_names": [
                "base"
              ],
              "is_boundary": true,
              "is_leaf": false
            }
          ]
        },
        {
          "bookmark_names": [
            "feat-b"
          ],
          "commits": [
            {
              "change_id": "rlkvnnup",
              "short_change_id": "rlkv",
              "commit_id": "c_rlkvnnup",
              "title": "feat b work",
              "description": "feat b work\n\nThe body explains why.\nIt spans two lines.",
              "author": {
                "name": "Test",
                "email": "test@test.com",
                "timestamp": "2026-01-01T00:00:00Z"
              },
              "files": [
                "src/rlkvnnup.rs"
              ],
              "is_immutable": true,
              "local_bookmark_names": [
                "feat-b",
                "old-mark"
              ],
              "is_boundary": true,
              "is_leaf": true
            }
          ]
        }
      ]
    }
  ]
}
